--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,7 @@ body {
     position: fixed;
     top: -100%;
     width: 300%;
+    animation: grain 8s steps(10) infinite;
   }
   &.no-scroll {
     overflow-y: hidden;
@@ -64,20 +65,7 @@ body {
   }
 }
 
-.row {
-  display: flex;
-  align-items: center;
-}
 
-.space-between {
-  justify-content: space-between;
-}
-
-.center {
-  justify-content: center;
-}
-
-// Header
 .container {
   flex-grow: 1;
   margin: 0 auto;
@@ -85,6 +73,11 @@ body {
   position: relative;
   width: auto;
   height: 100%;
+  &.fluid {
+    width: 100%;
+    max-width: 100%;
+    padding: 0;
+  }
   @media (min-width: 1024px) {
     max-width: 960px;
   }
@@ -93,6 +86,17 @@ body {
   }
   @media (min-width: 1408px) {
     max-width: 1560px;
+  }
+
+  .row {
+    display: flex;
+    align-items: center;
+    &.space-between {
+      justify-content: space-between;
+    }
+    &.center {
+      justify-content: center;
+    }
   }
 }
 
@@ -130,11 +134,11 @@ header {
   }
 }
 
-.main {
+main {
   .container {
     position: relative;
     .row {
-      height: 1005px;
+      height: 100vh;
       align-items: center;
       .image-container {
         position: relative;
